--- a/Village/appsettings.json
+++ b/Village/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "village": "Data Source=.;Initial Catalog=village;Integrated Security=True;"
+  },
   "AllowedHosts": "*"
 }
