--- a/VillageBackEnd/Village/appsettings.json
+++ b/VillageBackEnd/Village/appsettings.json
@@ -8,5 +8,9 @@
   "ConnectionStrings": {
     "village": "Data Source=.;Initial Catalog=village;Integrated Security=True;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "ThisismySecretKey",
+    "Issuer": "Test.com"
+  }
 }
